--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Capstone Presentations Summer 2024 Homepage</title>
+    <title>Capstone Presentations Autumn 2024 Homepage</title>
     <link rel="stylesheet" href="css/homepage.css">
     <script src="https://kit.fontawesome.com/89bc5abcf1.js" crossorigin="anonymous"></script>
 </head>
@@ -27,7 +27,7 @@
 
                         <ul class="dawgdrops-menu dawgdrops-menu-em" id="menu-102">
                             <li>
-                                <a href="./biological-sciences.html" title="BIO">Biology Term B</a>
+                                <a href="./biological-sciences.html" title="BIO">Biology</a>
                             </li>
                         </ul>
                     </li>
@@ -39,6 +39,9 @@
                         <ul class="dawgdrops-menu dawgdrops-menu-em" id="menu-104">
                             <li>
                                 <a href="./csse.html" title="CSSE">Computer Science & Software Engineering</a>
+                            </li>
+                            <li>
+                                <a href="./applied-computing.html" title="ACMPT">Applied Computing</a>
                             </li>
                         </ul>
 
@@ -71,22 +74,13 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="dawgdrops-item">
-                        <a class="dropdown-toggle" href="#" id="102" title="Physics">Research Experience for Undergraduates</a>
-
-                        <ul class="dawgdrops-menu dawgdrops-menu-em" id="menu-104">
-                            <li>
-                                <a href="./reu.html" title="PHYS">Research Experiences for Undergraduates</a>
-                            </li>
-                        </ul>
-                    </li>
                 </ul>
             </div>
         </nav>
 
 
         <div class="black-box">
-            <h1>Summer 2024 Capstone & Symposium</h1>
+            <h1>Autumn 2024 Capstone & Symposium</h1>
         </div>
 
 
@@ -108,40 +102,42 @@
         </ul><br>
         <b>Biology:</b>
         <ul>
-            <li>10:10 am to 11:25 am - Oral presentations | Innovation Hall room 134 </li>
+            <li>9:00 am to 11:00 pm - Oral presentations | Innovation Hall room 134 </li>
+            <li>11:00 am to 12:00 pm - Poster session | Innovation Hall 1st floor hallway</li>
         </ul>
-        <b>Physical Sciences:</b>
+        <br>
+        <b>Physical Sciences & Mathematics:</b>
         <ul>
-         <li>11:00 am to 12:00 pm Poster session | North Creek Event Center</li>
+            <li>8:00 am to 11:00 am - Oral presentations | TBD</li>
+            <li>11:00 am to 12:00 pm - Poster session | TBD</li>
         </ul>
+        <br>
         <b>Engineering:</b> including Computer Engineering, Electrical Engineering, Mechanical Engineering
         <ul>
             <li>9:30 am to 10:50 am - Oral presentations | Innovation Hall 111 </li>
-            <li>11:00 am to 12:00pm - Poster session & Demos | Innovation Hall Lower Level Atrium, room 010 and 011 </li>
+            <li>11:00 am to 12:00pm - Poster session & Demos | Innovation Hall Lower Level Atrium and room 010 </li>
         </ul>
         <br>
         <b>Computing and Software Systems:</b>
         <ul>
-            <li>11:00 am to 12:00 pm - Poster session | North Creek Event Center </li>
+            <li>11:00 am to 12:00 pm - Poster session | TBD </li>
             <li>1:00 pm to 3:30 pm - Computer Science and Software Engineering majors - Oral presentations | Founders
-                Hall (UW1) rooms 110, 120, 202, 210, 220, 221</li>
+                Hall rooms TBD</li>
         </ul>
         <br>
+	<b>REU</b>
+	<ul>
+		
+		<li>TBD</li>
 
+	</ul>
     </div>
     <br><br>
 
 
-    <div class="divisions-row divisions-row-2"></div>
 
 
     <div class="divisions-row divisions-row-2">
-
-        <a href="./reu.html" class="division-box">
-            <img src="./images/REU.jpg" alt="">
-            <div class="divsion-name">Research Experience for Undergraduates</div>
-        </a>
-
         <a href="./biological-sciences.html" class="division-box">
             <img src="images/(biology) Soil Samples.jpg" alt="Biological Sciences Image">
             <div class="divsion-name">Biological Sciences</div>
@@ -198,7 +194,7 @@
 
     <section class="sponsors">
         <figure>
-            <img src="./images/Summer_2024_Logos.png" alt="Sponsors">
+            <img src="./images/spr24 logos capstone.jpg" alt="Sponsors">
         </figure>
     </section>
 
