--- a/physics-poster-presentations.html
+++ b/physics-poster-presentations.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Physics & Chemistry Poster Presentations Summer 2024</title>
+    <title>Physics & Chemistry Poster Presentations Autumn 2024</title>
     <link rel="stylesheet" href="css/poster-presentations.css">
     <link rel="stylesheet" href="css/uw-button.css">
     <link rel="stylesheet" href="css/poster-homepage.css">
@@ -29,7 +29,7 @@
 
                         <ul class="dawgdrops-menu dawgdrops-menu-em" id="menu-102">
                             <li>
-                                <a href="./biological-sciences.html" title="BIO">Biology Term B</a>
+                                <a href="./biological-sciences.html" title="BIO">Biology Term A</a>
                             </li>
                         </ul>
                     </li>
@@ -88,7 +88,7 @@
 
 
         <div class="black-box">
-            <h1>Summer 2024 Capstone & Symposium</h1>
+            <h1>Autumn 2024 Capstone & Symposium</h1>
         </div>
 
 
