--- a/applied-computing.html
+++ b/applied-computing.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Applied Computing for Autumn 2024</title>
+    <title>Applied Computing for Summer 2024</title>
     <link rel="stylesheet" href="css/presentations.css">
     <link rel="stylesheet" href="css/acmpt_pres.css">
     <link rel="stylesheet" href="css/uw-button.css">
@@ -30,7 +30,7 @@
 
                         <ul class="dawgdrops-menu dawgdrops-menu-em" id="menu-102">
                             <li>
-                                <a href="./biological-sciences.html" title="BIO">Biology</a>
+                                <a href="./biological-sciences.html" title="BIO">Biology Term B</a>
                             </li>
                         </ul>
                     </li>
@@ -42,9 +42,6 @@
                         <ul class="dawgdrops-menu dawgdrops-menu-em" id="menu-104">
                             <li>
                                 <a href="./csse.html" title="CSSE">Computer Science & Software Engineering</a>
-                            </li>
-                            <li>
-                                <a href="./applied-computing.html" title="ACMPT">Applied Computing</a>
                             </li>
                         </ul>
 
@@ -77,11 +74,20 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="dawgdrops-item">
+                        <a class="dropdown-toggle" href="#" id="102" title="Physics">REU</a>
+
+                        <ul class="dawgdrops-menu dawgdrops-menu-em" id="menu-104">
+                            <li>
+                                <a href="./reu.html" title="PHYS">Research Experiences for Undergraduates</a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </nav>
 
-        <h1>Autumn 2024 Capstone & Symposium</h1>
+        <h1>Summer 2024 Capstone & Symposium</h1>
         <hr>
     </header>
 
@@ -134,18 +140,12 @@
     <!-- ------------------------------------ Panel Discussion 1 ------------------------------------ -->
 
     <div class="acContent_Block">
-    <div class="acContent_Block">
-    <div class="acContent_Block">
+
     </div>
     <!-- ------------------------------------ Panel Discussion 1 END ------------------------------------ -->
-    <div class="info-box">
-        <h4>TBD </h4>
-        <h1>Welcome & Introductions</h1>
-        <h2> </h2>
-    </div>
 
    
 </body>
 <script type='module' src="js/acpt.js"></script>
-<script type='module' src="js/structure.js"></script>
+<script type='moduek' src="js/structure.js"></script>
 </html>
