--- a/mathematics.html
+++ b/mathematics.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Mathematics Capstone Presentations Autumn 2024</title>
+    <title>Mathematics Capstone Presentations Summer 2024</title>
     <link rel="stylesheet" href="css/presentations.css">
     <link rel="stylesheet" href="css/uw-button.css">
     <link rel="stylesheet" href="css/multiple-rooms.css">
@@ -30,7 +30,7 @@
 
                         <ul class="dawgdrops-menu dawgdrops-menu-em" id="menu-102">
                             <li>
-                                <a href="./biological-sciences.html" title="BIO">Biology</a>
+                                <a href="./biological-sciences.html" title="BIO">Biology Term B</a>
                             </li>
                         </ul>
                     </li>
@@ -42,9 +42,6 @@
                         <ul class="dawgdrops-menu dawgdrops-menu-em" id="menu-104">
                             <li>
                                 <a href="./csse.html" title="CSSE">Computer Science & Software Engineering</a>
-                            </li>
-                            <li>
-                                <a href="./applied-computing.html" title="ACMPT">Applied Computing</a>
                             </li>
                         </ul>
 
@@ -77,13 +74,22 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="dawgdrops-item">
+                        <a class="dropdown-toggle" href="#" id="102" title="Physics">REU</a>
+
+                        <ul class="dawgdrops-menu dawgdrops-menu-em" id="menu-104">
+                            <li>
+                                <a href="./reu.html" title="PHYS">Research Experiences for Undergraduates</a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </nav>
 
 
         <div class="black-box">
-            <h1>Autumn 2024 Capstone & Symposium</h1>
+            <h1>Summer 2024 Capstone & Symposium</h1>
         </div>
 
 
@@ -96,14 +102,15 @@
     <p class="date">August 16, 2024</p>
 
     <p class="text">
-        <b>Oral Presentations:</b> DISC-252 | 10:00 AM - 11:00 AM </br>
-        <b>Poster Presentations:</b> Mobius Hall | 11:00 AM - 12:00 PM </a></br></br>
+        <!-- <b>Oral Presentations:</b> DISC-252 | 10:00 AM - 11:00 AM </br>
+        <b>Poster Presentations:</b> Mobius Hall | 11:00 AM - 12:00 PM </a></br></br> -->
+        No presentations this quarter.
     </p>
     <!-- ------------------------------------ Presentation 1 ------------------------------------ -->
 
 <!-- ------------------------------------ End Presentation 1 ------------------------------------ -->
 
-<section id="room-1-presentations" class="room"></section>
+<!--<section id="room-1-presentations" class="room"></section> -->
 
 
 
