--- a/physics+chemistry.html
+++ b/physics+chemistry.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Physics Presentations Autumn 2024</title>
+    <title>Physics Presentations Summer 2024</title>
     <link rel="stylesheet" href="css/presentations.css">
     <link rel="stylesheet" href="css/uw-button.css">
     <link rel="stylesheet" href="css/homepage.css">
@@ -29,7 +29,7 @@
 
                         <ul class="dawgdrops-menu dawgdrops-menu-em" id="menu-102">
                             <li>
-                                <a href="./biological-sciences.html" title="BIO">Biology Term A</a>
+                                <a href="./biological-sciences.html" title="BIO">Biology Term B</a>
                             </li>
                         </ul>
                     </li>
@@ -88,7 +88,7 @@
 
 
         <div class="black-box">
-            <h1>Autumn 2024 Capstone & Symposium</h1>
+            <h1>Summer 2024 Capstone & Symposium</h1>
         </div>
 
 
@@ -101,17 +101,13 @@
     <p class="date">August 16, 2024</p>
 
     <p class="text">
-        <b>Oral Presentations:</b> TBD | 8:00 AM to 11:00 AM
-
-            
-            <div class="info-box">
-                <h4>8:00 AM - 8:05 AM</h4>
-                <h1>Welcome & Introductions</h1>
-
-            </div>
-            <section id="room-1-presentations" class="room"></section>
-            <script type='module' src="js/phys.js"></script>
-            <script type='module' src="js/structure.js"></script>
-
-
+       
+        <b>Poster Presentations:</b> North Creek Event Center | 11:00 AM - 12:00 PM </a>
+    </li>
+    </p>
+    <section id="room-1-presentations" class="room"></section>
+    <script type=text/javascript src="js/jquery-3.6.0.min.js"></script>
+    <script type='text/javascript' src="js/multiple-rooms.js"></script>
+    <script type='module' src="js/phys.js"></script>
+    <script type='module' src="js/structure.js"></script>
 </html>
