--- a/csse.html
+++ b/csse.html
@@ -110,7 +110,7 @@
 
 
         <h2>Computer Science & Software Engineering</h2>
-        <p class="date"> December 13th </p>
+        <p class="date"> August 16, 2024 </p>
 
         <p class="text">
             Welcome to the Summer quarter Capstone Colloquium.<br /><br />
