--- a/index.html
+++ b/index.html
@@ -274,7 +274,11 @@
                             </li>
 
                             <li>
-                                http://127.0.0.1:8080/api/major/csse
+
+                            </li>
+
+                            <li>
+                                Mobile layout created by Haydn Tamura.
                             </li>
 
                         </ul>
